Se crea pagina1.html
-Se cambia titulo en negrita a color verde.
-Se agrega imagen a la resolucion minima deseada.
-Se coloca contenido en cursiva y en color verde.
-se adjunta video relacionado.
-footer.

--- a/estilos.css
+++ b/estilos.css
@@ -12,3 +12,17 @@
 .Tamañofont{
     font-size: 1.2em;
 }  
+.Bannerpag1{
+    background-image: url(img/Bannerpag1.png);
+    width: 1900px;
+    height: 635;
+    background-attachment: fixed;
+}
+.TituloySubtituloVerde {
+    color: green;
+}
+.Contenido{
+    font-style: italic;
+    color:green;
+    font-family:"Goudy Old Style";
+}
