Se crea pagina2.html
-Se  coloca el titulo en negrita y color azul.
-Se agrega imagen banner a la resolucion adecuada.
-Subtitulo y contenido en color azul.
-Se agrega audio relacionado.
-footer

--- a/estilos.css
+++ b/estilos.css
@@ -25,4 +25,14 @@
     font-style: italic;
     color:green;
     font-family:"Goudy Old Style";
+    text-align: justify;
+}
+.TituloySubtituloAzul{
+    color: blue;
+}
+.Contenido2{
+    font-style: italic;
+    color: blue;
+    font-family: "Goudy old Style";
+    text-align: left;
 }
